k8s/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c12-app
spec:
  replicas: 1
  minReadySeconds: 10
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: c12-app
  template:
    metadata:
      labels:
        app: c12-app
    spec:
      containers:
        - name: c12-app
          image: c12-app:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "256Mi"
              cpu: "256m"
          ports:
            - name: http-port
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              port: http-port
              path: /api/v1/health
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: http-port
              path: /api/v1/health
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
