k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: c12-service
spec:
  selector:
    app: c12-app
  ports:
    - port: 80
      targetPort: 8080
