k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-app
spec:
  selector:
    matchLabels:
      app: mongo-app
  template:
    metadata:
      labels:
        app: mongo-app
    spec:
      containers:
        - name: mongo-app
          image: mongo:4-bionic
          resources:
            limits:
              memory: "2048Mi"
              cpu: "2"
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo-app
  ports:
    - port: 27017
      targetPort: 27017
